MODSOURCE-921: new test added